<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="107dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:srcCompat="@drawable/ic_baseline_grade_24" />

    <TextView
        android:id="@+id/tv_congra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/well_done"
        android:textColor="@color/design_default_color_primary"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.2"
        app:srcCompat="@drawable/ic_baseline_grade_24" />

    <TextView
        android:id="@+id/tv_count_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_congra"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintHorizontal_bias="0.3"
        android:text="@string/your_record"
        android:textSize="24sp"
        android:textColor="@color/design_default_color_primary"/>

    <TextView
        android:id="@+id/tv_count_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_count_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_congra"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintHorizontal_bias="0.3"
        android:text="0"
        android:textSize="24sp"
        android:textColor="@color/design_default_color_primary"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_record"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/tell_us_your_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_count_title"
        app:layout_constraintVertical_bias="0.05">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_record"
        app:layout_constraintVertical_bias="0.05"/>


</androidx.constraintlayout.widget.ConstraintLayout>